testing/syntax-error/python/syntax-error1.py
# Isaac Computer Science
# Usage licensed under the Open Government Licence v3.0
# https://isaaccomputerscience.org/concepts/prog_softeng_debug

users_name = input("Please enter your name: "
print (users_name)